--- a/css/urban-header.css
+++ b/css/urban-header.css
@@ -1,4 +1,4 @@
-/*HEADER*/
+header-pinned/*HEADER*/
 body{
     margin:0px;
 }
@@ -314,23 +314,6 @@ ul{
 }
 
 
-@media(max-width:767px) {
-.header-links ul li {
-        width:28%;
-        font:400 13px/24px Lato, sans-serif
-    }
-   
-    .tt-name, .tt-title {
-       font-size: 16px !important;
-    }
-    .feature-link{
-        display: none !important;
-    }
-    #header-pinned .title{
-        font-size: 15px !important;
-        margin-left: 55px !important;
-    }
-}
 
 .header-links a {
     color: #fff;
